--- a/gradle-test/build.gradle
+++ b/gradle-test/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 }
 
 test {
+	useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed", "standardOut", "standardError"
     }
